<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_tag"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tv_main_money"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:gravity="end|center"
            android:hint="@string/default_number_0"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center"
            android:hint="@string/str_yuan"
            android:text="@string/str_yuan"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="35"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            tools:ignore="NestedWeights">

            <TableLayout
                android:id="@+id/tl_main_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:columnCount="3"
        android:orientation="vertical"
        android:rowCount="5">

        <Button
            android:id="@+id/bt_main_1"
            style="@style/my_main_keyboard_button"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/text_bt_main_number_1" />

        <Button
            android:id="@+id/bt_main_2"
            style="@style/my_main_keyboard_button"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/text_bt_main_number_2" />

        <Button
            android:id="@+id/bt_main_3"
            style="@style/my_main_keyboard_button"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/text_bt_main_number_3" />

        <Button
            android:id="@+id/bt_main_4"
            style="@style/my_main_keyboard_button"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/text_bt_main_number_4" />

        <Button
            android:id="@+id/bt_main_5"
            style="@style/my_main_keyboard_button"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/text_bt_main_number_5" />

        <Button
            android:id="@+id/bt_main_6"
            style="@style/my_main_keyboard_button"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/text_bt_main_number_6" />

        <Button
            android:id="@+id/bt_main_7"
            style="@style/my_main_keyboard_button"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/text_bt_main_number_7" />

        <Button
            android:id="@+id/bt_main_8"
            style="@style/my_main_keyboard_button"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/text_bt_main_number_8" />

        <Button
            android:id="@+id/bt_main_9"
            style="@style/my_main_keyboard_button"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/text_bt_main_number_9" />

        <Button
            android:id="@+id/bt_main_c"
            style="@style/my_main_keyboard_button"
            android:layout_row="3"
            android:layout_column="0"

            android:text="@string/text_bt_main_back" />

        <Button
            android:id="@+id/bt_main_0"
            style="@style/my_main_keyboard_button"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/text_bt_main_number_0" />

        <Button
            android:id="@+id/bt_main_ok"
            style="@style/my_main_keyboard_button"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/text_bt_main_save" />
    </GridLayout>

</LinearLayout>